vlib/v/parser/tests/invalid_using_static.vv
fn main() {
	if static true {
		println(true)
	}
}
